src/test/ui/derives/deriving-meta-empty-trait-list.rs
#![deny(unused)]

#[derive()] //~ ERROR unused attribute
struct _Bar;

pub fn main() {}
